--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE=HTML>
-<html lang="ua">
+<html lang="ua, en">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
@@ -32,13 +32,18 @@
 			</header>
 				<main>
 				<article>
-					</<section>
+					<section>
 							<h1>Кактус</h1>
 							<p>Слово «кактус» походить від грец. Κακτος, яке в класичній грецькій мові використовувалося для позначення
 								одного з видів реп'яху. Карл Лінней ввів це слово як ім'я роду Cactus в 1737 у своїй ранній роботі Hortus
 								Cliffirtianus, швидше за все як скорочення від слова мелокактус, яке тоді широко використовувалося для позначення
 								цих рослин. Сьогодні це слово в ботаніці використовується для імені родини Cactaceae — Кактусові.</p>
 							<img class="content_img" src="img/plants/cactus_link.jpg" alt="Cactus">
+					</section>
+					<section>
+						<h1>Ajahuaska-Aloe</h1>
+						<p>Ce aloe z albumy Ajahuaska gurtu LatexFauna</p>
+						<img src="img/plants/ajahuaska" alt="Ajahuaska">
 					</section>
 				</article>
 				<aside>
