--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section>
 						<h1>Ajahuaska-Aloe</h1>
 						<p>Ce aloe z albumy Ajahuaska gurtu LatexFauna</p>
-						<img src="img/plants/ajahuaska" alt="Ajahuaska">
+						<img src="img/plants/ajahuaska.jpg" alt="Ajahuaska">
 					</section>
 				</article>
 				<aside>
