--- a/registration.html
+++ b/registration.html
@@ -1,30 +1,32 @@
 <!DOCTYPE=HTML>
+<html lang="ua, en">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
-		<title>LIUDA</title>
-		<link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
+		<title>PlantW</title>
+		<link rel="shortcut icon" href="img/small/title_aloe.png">
 	</head>
 		<body>
 			<header>
+
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
-					    <span><!--<img src="menu.svg" alt="MENU">--></span>
+					    <span></span>
 					  </label>
-
 					<ul class="menu_box">
-						<li><a class="menu_item" id="sub_open" href="HT.html">Види</a>
+						<li><a class="menu_item" href="">Головна</a></li>
+						<li><a class="menu_item" id="sub_open" href="">Види</a>
 
-							<ul class="sub_menu_box">
+							<!--ul class="sub_menu_box">
 								<li><a class="sub_menu_item" href="HT.html">Сукуленти</a></li>
 								<li><a class="sub_menu_item" href="HT.html">Кактуси</a></li>
 								<li><a class="sub_menu_item" href="HT.html">Рослини</a></li>
-							</ul>
+							</ul>-->
 
 						</li>
-						<li><a class="menu_item" href="HT.html">Догляд</a></li>
-						<li><a class="menu_item" href="Registration.html">Реєстрація</a></li>
+						<li><a class="menu_item" href="">Догляд</a></li>
+						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
 				</div>
 			</header>
