--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 					</section>
 				</article>
 				<aside>
+						<section>
+							<h1>Реклама</h1>
+							<p class="help">Її не буде видно якщо відкрити меню</p>
+						</section>
+						<section>
+							<h2>Plumbus</h2>
+							<a target="_blank" href="https://www.amazon.com/3D-Central-Printed-Plumbus/dp/B071CVGDZJ"><img src="img/ad/plumbus.png" alt="plumbus"></a>
+							<p>Плюмбус для перемішування ґрунту перед посадкою рослинок</p>
+							<blockquote cite="http://">
+								<p>"Завдяки <b>плюмбусу</b> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
+								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових Ріків фермерів</cite>
+							</blockquote>
+						</section>
 				</aside>
 				</main>
 				<footer>
