--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 					<section>
 							<h1>Кактус</h1>
 							<p>Слово «кактус» походить від грец. Κακτος, яке в класичній грецькій мові використовувалося для позначення
-								одного з видів реп'яху. Карл Лінней ввів це слово як ім'я роду Cactus в 1737 у своїй ранній роботі Hortus
-								Cliffirtianus, швидше за все як скорочення від слова мелокактус, яке тоді широко використовувалося для позначення
-								цих рослин. Сьогодні це слово в ботаніці використовується для імені родини Cactaceae — Кактусові.</p>
+								одного з видів реп'яху. Він колеться, хоча бувають кактуси, які не колять. В мене </p>
 							<img class="content_img" src="img/plants/cactus_link.jpg" alt="Cactus">
 					</section>
 					<section>
@@ -57,9 +55,14 @@
 							<a target="_blank" href="https://www.amazon.com/3D-Central-Printed-Plumbus/dp/B071CVGDZJ"><img src="img/ad/plumbus.png" alt="plumbus"></a>
 							<p>Плюмбус для перемішування ґрунту перед посадкою рослинок</p>
 							<blockquote cite="http://">
-								<p>"Завдяки <b>плюмбусу</b> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
+								<p>"Завдяки <em>плюмбусу</em> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
 								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових Ріків фермерів</cite>
 							</blockquote>
+						</section>
+						<section>
+							<h2>Soda Na<sub>2</sub>CO<sub>3</sub></h2>
+							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
+							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a style="text-decoration:none" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
 						</section>
 				</aside>
 				</main>
