--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section>
 							<h1>Кактус</h1>
 							<p>Слово «кактус» походить від грец. Κακτος, яке в класичній грецькій мові використовувалося для позначення
-								одного з видів реп'яху. Він колеться, хоча бувають кактуси, які не колять. В мене </p>
+								одного з видів реп'яху. Він колеться, хоча бувають кактуси, які не колять. В мене є 3 кактуси, Люда їх поливає і лише один з них колючий</p>
 							<img class="content_img" src="img/plants/cactus_link.jpg" alt="Cactus">
 					</section>
 					<section>
@@ -61,7 +61,7 @@
 						</section>
 						<section>
 							<h2>Soda Na<sub>2</sub>CO<sub>3</sub></h2>
-							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
+							<img src="img/ad/soda.png" alt="soda">
 							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a style="text-decoration:none" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
 						</section>
 				</aside>
