--- a/index.html
+++ b/index.html
@@ -56,13 +56,18 @@
 							<p>Плюмбус для перемішування ґрунту перед посадкою рослинок</p>
 							<blockquote cite="http://">
 								<p>"Завдяки <em>плюмбусу</em> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
-								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових Ріків фермерів</cite>
+								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових фермерів-Ріків</cite>
 							</blockquote>
 						</section>
 						<section>
 							<h2>Soda Na<sub>2</sub>CO<sub>3</sub></h2>
-							<img src="img/ad/soda.png" alt="soda">
+							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
 							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a style="text-decoration:none" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
+						</section>
+						<section>
+							<h2>Хочеш великий Cocktus?</h2>
+							<a target="_blank" href="https://floristics.info/ua/statti/3213-kaktusi-v-domashnikh-umovakh.html"><img src="img/ad/dick_cactus.jpg" alt="cactus_dick"></a>
+							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
 						</section>
 				</aside>
 				</main>
