--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<aside>
 						<section>
 							<h1>Реклама</h1>
-							<p class="help">Її не буде видно якщо відкрити меню</p>
+							<p class="help">(насправді ні, це просто смішні поради вам, мої любі поціновувачі залені, тож вимкніть AdBlock і трішки повеселіться)</p>
 						</section>
 						<section>
 							<h2>Plumbus</h2>
