--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	</head>
 		<body>
 			<header>
-
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
@@ -16,21 +15,13 @@
 					  </label>
 					<ul class="menu_box">
 						<li><a class="menu_item" href="">Головна</a></li>
-						<li><a class="menu_item" id="sub_open" href="">Види</a>
-
-							<!--ul class="sub_menu_box">
-								<li><a class="sub_menu_item" href="HT.html">Сукуленти</a></li>
-								<li><a class="sub_menu_item" href="HT.html">Кактуси</a></li>
-								<li><a class="sub_menu_item" href="HT.html">Рослини</a></li>
-							</ul>-->
-
-						</li>
+						<li><a class="menu_item" id="sub_open" href="">Види</a></li>
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
 				</div>
 			</header>
-				<main>
+			<main>
 				<article>
 					<section class="cactus">
 							<h1>Кактус</h1>
@@ -45,7 +36,8 @@
 						<img src="img/plants/ajahuaska.jpg" alt="Ajahuaska">
 					</section>
 				</article>
-				<aside>
+			</main>
+			<aside>
 						<section>
 							<h1>Реклама</h1>
 							<p class="help">(насправді ні, це просто смішні поради вам, мої любі поціновувачі залені, тож вимкніть AdBlock і трішки повеселіться)</p>
@@ -69,9 +61,8 @@
 							<a target="_blank" href="https://floristics.info/ua/statti/3213-kaktusi-v-domashnikh-umovakh.html"><img src="img/ad/dick_cactus.jpg" alt="cactus_dick"></a>
 							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
 						</section>
-				</aside>
-				</main>
-				<footer>
-				</footer>
+			</aside>
+			<footer>
+			</footer>
 		</body>
 </html>
