--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
+					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 				</div>
 			</header>
 			<main>
