--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
+					<h2 class="logo_aloe title">Plant</h2>
 					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 				</div>
 			</header>
@@ -64,6 +65,8 @@
 						</section>
 			</aside>
 			<footer>
+				<!-- <a href="#"><img class="sociallogo" src="img/small/instagram.png" alt="instalink"></a>
+				<p>Наш Інстаграм</p> -->
 			</footer>
 		</body>
 </html>
