--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						</section>
 			</aside>
 			<footer>
-				<!-- <a href="#"><img class="sociallogo" src="img/small/instagram.png" alt="instalink"></a>
-				<p>Наш Інстаграм</p> -->
+				 <div class="sociallogo"><a target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink">
+					 <p>Наш Інстаграм</p></div>
 			</footer>
 		</body>
 </html>
