--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 					    <span></span>
 					  </label>
 					<ul class="menu_box">
-						<li><a class="menu_item" href="">Головна</a></li>
-						<li><a class="menu_item" id="sub_open" href="">Види</a></li>
+						<li><a class="menu_item" href="index.html">Головна</a></li>
+						<li><a class="menu_item sub_open" href="#" >Види</a>
+							<ul class="sub_menu" >
+								<a class="sub_menu_item" href="index.html"><li>Кактуси</li></a>
+								<a class="sub_menu_item" href="index.html"><li>Сукуленти</li></a>
+								<a class="sub_menu_item" href="index.html"><li>Рослинки</li></a>
+							</ul>
+						</li>
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
