--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
-					<h2 class="logo_aloe title">Plant</h2>
+					<p class="title">Plant</p>
 					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 				</div>
 			</header>
@@ -81,8 +81,7 @@
 						</section>
 			</aside>
 			<footer>
-				 <div class="sociallogo"><a target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink">
-					 <p>Наш Інстаграм</p></div>
+				 <a class="sociallogo" target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink"><a>
 			</footer>
 		</body>
 </html>
