--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
-					<p class="title">Plant</p>
-					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 				</div>
+				<h2 class="title">Plant</h2>
+				<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 			</header>
 			<main>
 				<article>
