--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 		<body>
 			<header>
+				<div id="logo"><img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
+				<h2 class="logo_title">Plant</h2></div>
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
@@ -26,8 +28,6 @@
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
 				</div>
-				<h2 class="title">Plant</h2>
-				<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
 			</header>
 			<main>
 				<article>
