--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 							сантиметрів. На стіл вже не влазе, треба кудись переставить і <em>пересадить</em></p>
 						<img src="img/plants/snake_plant.jpg" alt="snake_plant">
 					</section>
+					<section class="green_flat">
+						<h1>Зелене житло</h1>
+						<p></p>
+						<img src="img/plants/green_flat.jpg" alt="Красива квартира вся в зелені">
+					</section>
+					<section class="big_leaf">
+						<h1>Великий Вазон</h1>
+						<p></p>
+						<img src="img/plants/big_leaf.jpg" alt="Велика рослина біля білої стіни">
+					</section>
 				</article>
 			</main>
 			<aside>
