--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
 							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a style="text-decoration:none" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
 						</section>
-						<section>
+						<section style="border:none">
 							<h2>Хочеш великий Cocktus?</h2>
 							<a target="_blank" href="https://floristics.info/ua/statti/3213-kaktusi-v-domashnikh-umovakh.html"><img src="img/ad/dick_cactus.jpg" alt="cactus_dick"></a>
 							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
