--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
@@ -31,6 +31,7 @@
 			</header>
 			<main>
 				<article>
+					<h2 id="main_title">All About...</h2>
 					<section class="cactus">
 							<h2>Кактус</h2>
 							<p>Слово «кактус» походить від грец. Κακτος, яке в класичній грецькій мові використовувалося для позначення
@@ -90,7 +91,7 @@
 						<section>
 							<h3>Soda Na<sub>2</sub>CO<sub>3</sub></h3>
 							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
-							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a style="color: purple" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
+							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a id="read_more" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
 						</section>
 						<section style="border:none">
 							<h3>Хочеш великий Cocktus?</h3>
