--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="uk">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<title>PlantW</title>
 		<link rel="shortcut icon" href="img/small/title_aloe.png">
 	</head>
 		<body>
 			<header>
-				<div id="logo"><img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
-				<h1 class="logo_title">Plant<span style="display:none">W</span></h1></div>
+				<div id="logo">
+					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
+					<h1 class="logo_title">Plant<span style="display:none">W</span></h1>
+				</div>
+				<nav>
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
@@ -28,6 +31,7 @@
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
 				</div>
+			</nav>
 			</header>
 			<main>
 				<article>
@@ -72,6 +76,12 @@
 						</ul>
 						<img src="img/plants/big_leaf.jpg" alt="Велика рослина біля білої стіни">
 					</section>
+						<section class="snake_plant">
+							<h2>Кімнатні рослини</h2>
+							<p>Затишок в оселі- те до чого прагне кожен господар, і це не тільки картаті пледи та стильні меблі, це ще й наявність душі, а як людина
+								лишить частинку себе, лише серез турботу та дарування любові іншій живій істоті,і тут на допомогу у створенні душевного затишку приходять наші
+								мовчазні друзі-кімнатні рослини</p>
+						</section>
 				</article>
 			</main>
 			<aside>
@@ -102,5 +112,6 @@
 			<footer>
 				 <a class="sociallogo" target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink"></a>
 			</footer>
+			<script src="js/script.js"></script>
 		</body>
 </html>
