--- a/registration.html
+++ b/registration.html
@@ -1,39 +1,36 @@
-<!DOCTYPE html>
-<html lang="uk">
+<!DOCTYPE=HTML>
+<html lang="ua, en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 		<title>PlantW</title>
 		<link rel="shortcut icon" href="img/small/title_aloe.png">
 	</head>
 		<body>
 			<header>
-				<div id="logo">
-					<img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
-					<h1 class="logo_title">Plant<span style="display:none">W</span></h1>
-				</div>
-				<nav>
+
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
 					    <span></span>
 					  </label>
 					<ul class="menu_box">
-						<li><a class="menu_item" href="#">Головна</a></li>
-						<li><a class="menu_item sub_open" href="#" >Види</a>
-							<ul class="sub_menu" >
-								<li><a class="sub_menu_item" href="#">Кактуси</a></li>
-								<li><a class="sub_menu_item" href="#">Сукуленти</a></li>
-								<li><a class="sub_menu_item" href="#">Рослинки</a></li>
-							</ul>
+						<li><a class="menu_item" href="">Головна</a></li>
+						<li><a class="menu_item" id="sub_open" href="">Види</a>
+
+							<!--ul class="sub_menu_box">
+								<li><a class="sub_menu_item" href="HT.html">Сукуленти</a></li>
+								<li><a class="sub_menu_item" href="HT.html">Кактуси</a></li>
+								<li><a class="sub_menu_item" href="HT.html">Рослини</a></li>
+							</ul>-->
+
 						</li>
-						<li><a class="menu_item" href="#">Догляд</a></li>
+						<li><a class="menu_item" href="">Догляд</a></li>
 						<li><a class="menu_item" href="registration.html">Реєстрація</a></li>
 					</ul>
 				</div>
-			</nav>
 			</header>
-				<main>
+				<article>
 					<form class="form" action="HT.html">
 						<p>Login: <input name="login" required></p>
 						<p>Password: <input type="password" name="login" required></p>
@@ -43,9 +40,32 @@
 						<p><input type="radio" name="gender" value="No-Binary">No-Binary</p>
 						<p><input type="submit"></p>
 					</form>
-				</main>
-				<aside>
-				</aside>
+				</article>
+							<aside>
+						<section>
+							<h2>Реклама</h2>
+							<p class="help">(насправді ні, це просто смішні поради вам, мої любі поціновувачі залені, тож вимкніть AdBlock і трішки повеселіться)</p>
+						</section>
+						<section>
+							<h3>Plumbus</h3>
+							<a target="_blank" href="https://www.amazon.com/3D-Central-Printed-Plumbus/dp/B071CVGDZJ"><img src="img/ad/plumbus.png" alt="plumbus"></a>
+							<p>Плюмбус для перемішування ґрунту перед посадкою рослинок</p>
+							<blockquote cite="https://ru.wikipedia.org/wiki/%D0%A0%D0%B8%D0%BA_%D0%A1%D0%B0%D0%BD%D1%87%D0%B5%D0%B7">
+								<p>"Завдяки <em>плюмбусу</em> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
+								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових фермерів-Ріків</cite>
+							</blockquote>
+						</section>
+						<section>
+							<h3>Soda Na<sub>2</sub>CO<sub>3</sub></h3>
+							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
+							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a id="read_more" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
+						</section>
+						<section style="border:none">
+							<h3>Хочеш великий Cocktus?</h3>
+							<a target="_blank" href="https://floristics.info/ua/statti/3213-kaktusi-v-domashnikh-umovakh.html"><img src="img/ad/dick_cactus.jpg" alt="cactus_dick"></a>
+							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
+						</section>
+			</aside>
 				<footer>
 				</footer>
 		</body>
