--- a/registration.html
+++ b/registration.html
@@ -1,14 +1,13 @@
-<!DOCTYPE=HTML>
-<html lang="ua, en">
+<!DOCTYPE html>
+<html lang="uk">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<title>PlantW</title>
 		<link rel="shortcut icon" href="img/small/title_aloe.png">
 	</head>
 		<body>
 			<header>
-
 				<div class="hamburger-menu">
 					  <input id="menu_toggle" type="checkbox" />
 					  <label class="menu_btn" for="menu_toggle">
@@ -41,31 +40,8 @@
 						<p><input type="submit"></p>
 					</form>
 				</article>
-							<aside>
-						<section>
-							<h2>Реклама</h2>
-							<p class="help">(насправді ні, це просто смішні поради вам, мої любі поціновувачі залені, тож вимкніть AdBlock і трішки повеселіться)</p>
-						</section>
-						<section>
-							<h3>Plumbus</h3>
-							<a target="_blank" href="https://www.amazon.com/3D-Central-Printed-Plumbus/dp/B071CVGDZJ"><img src="img/ad/plumbus.png" alt="plumbus"></a>
-							<p>Плюмбус для перемішування ґрунту перед посадкою рослинок</p>
-							<blockquote cite="https://ru.wikipedia.org/wiki/%D0%A0%D0%B8%D0%BA_%D0%A1%D0%B0%D0%BD%D1%87%D0%B5%D0%B7">
-								<p>"Завдяки <em>плюмбусу</em> я більше не мушу провозити Мегафрукти в своїй дупі"</p>
-								<cite>Рік-J19ζ7.<br> Міжгалактичний фестеваль Мегафруктових фермерів-Ріків</cite>
-							</blockquote>
-						</section>
-						<section>
-							<h3>Soda Na<sub>2</sub>CO<sub>3</sub></h3>
-							<a target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html"><img src="img/ad/soda.png" alt="soda"></a>
-							<p>22 способи застосування <em>соди</em> при розведенні рослин: <b>на ніч</b> просто...<a id="read_more" target="_blank" href="https://7dach.ru/IrinaKydrina/pischevaya-soda-dlya-sada-i-ogoroda-22-sposoba-primeneniya-na-uchastke-161072.html">Читати далі</a></p>
-						</section>
-						<section style="border:none">
-							<h3>Хочеш великий Cocktus?</h3>
-							<a target="_blank" href="https://floristics.info/ua/statti/3213-kaktusi-v-domashnikh-umovakh.html"><img src="img/ad/dick_cactus.jpg" alt="cactus_dick"></a>
-							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
-						</section>
-			</aside>
+				<aside>
+				</aside>
 				<footer>
 				</footer>
 		</body>
