Current menu item

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					    <span></span>
 					  </label>
 					<ul class="menu_box">
-						<li><a class="menu_item" href="#">Головна</a></li>
+						<li><a class="menu_item current" href="#">Головна</a></li>
 						<li><a class="menu_item sub_open" href="#" >Види</a>
 							<ul class="sub_menu" >
 								<li><a class="sub_menu_item" href="#">Кактуси</a></li>
