--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</header>
 			<main>
 				<article>
-					<h2 id="main_title">All About...</h2>
+					<h2 id="main_title">CONTENT</h2>
 					<section class="cactus">
 							<h2>Кактус</h2>
 							<p>Слово «кактус» походить від грец. Κακτος, яке в класичній грецькій мові використовувалося для позначення
