--- a/clicker.html
+++ b/clicker.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>MyClicker</title>
     <link rel="stylesheet" href="css/styleJs.css">
+    <link rel="shortcut icon" href="img/small/title_aloe.png">
   </head>
   <body>
     <header>
