--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<link rel="stylesheet" href="css/style.css">
 		<title>PlantW</title>
 		<link rel="shortcut icon" href="img/small/title_aloe.png">
-		<script src="js/script.js"></script>
 	</head>
 		<body>
 			<header>
@@ -115,4 +114,5 @@
 				 <a class="sociallogo" target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink"></a>
 			</footer>
 		</body>
+			<script src=""></script>
 </html>
