--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				</div>
 			</nav>
 			</header>
+			<div id="scrool">
 			<main>
 				<article>
 					<h2 id="main_title">CONTENT</h2>
@@ -110,6 +111,7 @@
 							<p>Ти, твій чоловік або знайомий не можуть виростити <em>кактус</em>? Він в'яне, жовтіє чи <em>не розмножується</em>? Тобі сюди! Тепер твій кактус розквітне, а <b>дєток</b> пускатиме ледь не щодня</p>
 						</section>
 			</aside>
+		</div>
 			<footer>
 				 <a class="sociallogo" target="_blank" href="https://www.instagram.com/kalenychenko_/"><img  src="img/small/instagram.png" alt="instalink"></a>
 			</footer>
