--- a/clicker.html
+++ b/clicker.html
@@ -14,23 +14,32 @@
         <img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
       </div>
     <h2 id="gold">Gold: 0</h2>
+    <img id="settings" src="img/clicker/settings.png" alt="settings">
+    <div id="settingsMenu">
+      <h2 class="settingsOption">Language</h2>
+      <span id="settingsCloseButton">✖</span>
+      <button class="settingsButton" id="enLanguage" type="button" name="enLanguage">English</button> <br>
+      <button class="settingsButton" id="ukLanguage" type="button" name="ukLanguage">Українська</button> <br>
+      <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button>
+    </div>
+    <!--<h2 id="diamonds">Diamonds: 0</h2>-->
     </header>
     <main>
     <h2 id="stage"> STAGE: 1</h2>
     <h2 id="killedCount">0/10</h2>
     <h2 id="dpc">DPC: 1</h2>
     <h2 id="dps">DPS: 0</h2>
-    <h2 id="enemyHealth">Health: 999/999</h2>
+    <h2 id="enemyHealth">Health: 0/0</h2>
     <img id="enemyImg" src="img/clicker/enemy.png" alt="ENEMY">
   </main>
   <aside class="shop">
-    <p id="sword">Sword 20 coins (+1 DPC)</p>
-    <p id="luda">Luda 50 coins (+1 DPS)</p>
-    <p id="galina">Galiasha 500 coins (+5 DPS)</p>
-    <p id="anton">Anton 2K coins (+20 DPS)</p>
-    <p id="yarik">Yarik 10K coins (+100 DPS)</p>
-    <p id="nazar">Nazar 50K coins (+200 DPS)</p>
-    <p id="olia">Olka 500K coins (+500 DPS)</p>
+    <p id="sword">Sword </br> <span class="itemCost"> 20 coins </span> (+1 DPC) </br> Owned 0</p>
+    <p id="luda">Luda </br> <span class="itemCost"> 50 coins </span> (+1 DPS) </br> Owned 0</p>
+    <p id="galina">Galiasha </br> <span class="itemCost">500 coins </span> (+5 DPS) </br> Owned 0</p>
+    <p id="anton">Anton </br> <span class="itemCost">2K coins </span> (+20 DPS) </br> Owned 0</p>
+    <p id="yarik">Yarik </br> <span class="itemCost">10K coins </span> (+100 DPS) </br> Owned 0</p>
+    <p id="nazar">Nazar </br> <span class="itemCost">50K coins </span> (+200 DPS) </br> Owned 0</p>
+    <p id="olia">Oliasha </br> <span class="itemCost">500K coins </span> (+500 DPS) </br> Owned 0</p>
   </aside>
   </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
