--- a/clicker.html
+++ b/clicker.html
@@ -30,7 +30,8 @@
     <h2 id="dpc">DPC: 1</h2>
     <h2 id="dps">DPS: 0</h2>
     <h2 id="enemyHealth">Health: 0/0</h2>
-    <img id="enemyImg" src="img/clicker/enemy.png" alt="ENEMY">
+    <img id="enemyImg" src="img/clicker/aloe.png" alt="ENEMY">
+    <h2 id="enemyName">ALOE</h2>
   </main>
   <aside class="shop">
     <p id="sword">Sword </br> <span class="itemCost"> 20 coins </span> (+1 DPC) </br> Owned 0</p>
