--- a/clicker.html
+++ b/clicker.html
@@ -13,7 +13,7 @@
         <a href="index.html"><h1 class="logo_title">Plant<span style="display:none">W</span></h1></a>
         <img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
       </div>
-    <h2 id="gold">Gold: 0</h2>
+    <h2 id="gold">Plant Love: 0</h2>
     <img id="settings" src="img/clicker/settings.png" alt="settings">
     <div id="settingsMenu">
       <h2 class="settingsOption">Language</h2>
@@ -22,19 +22,20 @@
       <button class="settingsButton" id="ukLanguage" type="button" name="ukLanguage">Українська</button> <br>
       <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button>
     </div>
+    <div id="damageText">1</div>
     <!--<h2 id="diamonds">Diamonds: 0</h2>-->
     </header>
     <main>
     <h2 id="stage"> STAGE: 1</h2>
-    <h2 id="killedCount">0/10</h2>
-    <h2 id="dpc">DPC: 1</h2>
-    <h2 id="dps">DPS: 0</h2>
-    <h2 id="enemyHealth">Health: 0/0</h2>
+    <h2 id="dpc">WpC: 1</h2>
+    <h2 id="dps">WpS: 0</h2>
+    <h2 id="enemyHealth">Hunger: 0/0</h2>
     <img id="enemyImg" src="img/clicker/aloe.png" alt="ENEMY">
+    <h2 id="killedCount">0/10</h2>
     <h2 id="enemyName">ALOE</h2>
   </main>
   <aside class="shop">
-    <p id="sword">Sword </br> <span class="itemCost"> 5 coins </span> (+1 DPC) </br> Owned 0</p>
+    <p id="sword">Watering Pot</br> <span class="itemCost"> 5 coins </span> (+1 DPC) </br> Owned 0</p>
     <p id="luda">Luda </br> <span class="itemCost"> 50 coins </span> (+5 DPS) </br> Owned 0</p>
     <p id="galina">Galiasha </br> <span class="itemCost">500 coins </span> (+20 DPS) </br> Owned 0</p>
     <p id="anton">Anton </br> <span class="itemCost">2K coins </span> (+200 DPS) </br> Owned 0</p>
