--- a/clicker.html
+++ b/clicker.html
@@ -6,6 +6,11 @@
     <title>MyClicker</title>
     <link rel="stylesheet" href="css/styleJs.css">
     <link rel="shortcut icon" href="img/small/title_aloe.png">
+    <div id="loadScreen">
+      <div id="loadScreenLogo">
+        <img src="img/small/logo_aloe.png">
+      </div>
+    </div>
   </head>
   <body>
     <header>
