--- a/clicker.html
+++ b/clicker.html
@@ -18,7 +18,7 @@
         <a href="index.html"><h1 class="logo_title">Plant<span style="display:none">W</span></h1></a>
         <img class="logo_aloe" src="img/small/title_aloe.png" alt="LOGO">
       </div>
-    <h2 id="gold">Plant Love: 0</h2>
+    <h2 id="gold"></h2>
     <img id="settings" src="img/clicker/settings.png" alt="settings">
     <div id="settingsMenu">
       <h2 class="settingsOption">Language</h2>
@@ -31,22 +31,22 @@
     <!--<h2 id="diamonds">Diamonds: 0</h2>-->
     </header>
     <main>
-    <h2 id="stage"> STAGE: 1</h2>
-    <h2 id="dpc">WpC: 1</h2>
-    <h2 id="dps">WpS: 0</h2>
-    <h2 id="enemyHealth">Hunger: 0/0</h2>
-    <img id="enemyImg" src="img/clicker/aloe.png" alt="ENEMY">
-    <h2 id="killedCount">0/10</h2>
-    <h2 id="enemyName">ALOE</h2>
+    <h2 id="stage"></h2>
+    <h2 id="dpc"></h2>
+    <h2 id="dps"></h2>
+    <h2 id="enemyHealth"></h2>
+    <img id="enemyImg" alt="ENEMY">
+    <h2 id="killedCount"></h2>
+    <h2 id="enemyName"></h2>
   </main>
   <aside class="shop">
-    <p id="sword">Watering Pot</br> <span class="itemCost"> 5 coins </span> (+1 DPC) </br> Owned 0</p>
-    <p id="luda">Luda </br> <span class="itemCost"> 50 coins </span> (+5 DPS) </br> Owned 0</p>
-    <p id="galina">Galiasha </br> <span class="itemCost">500 coins </span> (+20 DPS) </br> Owned 0</p>
-    <p id="anton">Anton </br> <span class="itemCost">2K coins </span> (+200 DPS) </br> Owned 0</p>
-    <p id="yarik">Yarik </br> <span class="itemCost">10K coins </span> (+1000 DPS) </br> Owned 0</p>
-    <p id="nazar">Nazar </br> <span class="itemCost">50K coins </span> (+20000 DPS) </br> Owned 0</p>
-    <p id="olia">Oliasha </br> <span class="itemCost">500K coins </span> (+1000000 DPS) </br> Owned 0</p>
+    <p id="sword"></p>
+    <p id="luda"></p>
+    <p id="galina"></p>
+    <p id="anton"></p>
+    <p id="yarik"></p>
+    <p id="nazar"></p>
+    <p id="olia"></p>
   </aside>
   </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
