--- a/clicker.html
+++ b/clicker.html
@@ -25,7 +25,9 @@
       <span id="settingsCloseButton">✖</span>
       <button class="settingsButton" id="enLanguage" type="button" name="enLanguage">English</button> <br>
       <button class="settingsButton" id="ukLanguage" type="button" name="ukLanguage">Українська</button> <br>
-      <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button>
+      <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button> <br>
+      <!--<button class="settingsButton" id="save" type="button" name="ruLanguage">Save</button>
+      <button class="settingsButton" id="save" type="button" name="ruLanguage">Load</button>-->
     </div>
     <div id="damageText">1</div>
     <!--<h2 id="diamonds">Diamonds: 0</h2>-->
