--- a/clicker.html
+++ b/clicker.html
@@ -21,13 +21,15 @@
     <h2 id="gold"></h2>
     <img id="settings" src="img/clicker/settings.png" alt="settings">
     <div id="settingsMenu">
-      <h2 class="settingsOption">Language</h2>
+      <h2 class="settingsOption" id="language">Language</h2>
       <span id="settingsCloseButton">✖</span>
       <button class="settingsButton" id="enLanguage" type="button" name="enLanguage">English</button> <br>
       <button class="settingsButton" id="ukLanguage" type="button" name="ukLanguage">Українська</button> <br>
       <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button> <br>
-      <!--<button class="settingsButton" id="save" type="button" name="ruLanguage">Save</button>
-      <button class="settingsButton" id="save" type="button" name="ruLanguage">Load</button>-->
+      <h2 class="settingsOption" id="resetOption">Reset</h2>
+      <button class="settingsButton" id="reset" type="button" name="reset">Reset</button> <br>
+      <!--<button class="settingsButton" id="save" type="button" name="save">Save</button>
+      <button class="settingsButton" id="load" type="button" name="load">Load</button>-->
     </div>
     <div id="damageText">1</div>
     <!--<h2 id="diamonds">Diamonds: 0</h2>-->
