--- a/clicker.html
+++ b/clicker.html
@@ -28,10 +28,13 @@
       <button class="settingsButton" id="ruLanguage" type="button" name="ruLanguage">Русский</button> <br>
       <h2 class="settingsOption" id="resetOption">Reset</h2>
       <button class="settingsButton" id="reset" type="button" name="reset">Reset</button> <br>
+      <h2 class="settingsOption" id="visualOption">Style</h2>
+      <button class="settingsButton" id="backgroundChange" type="button" name="background">Background Change</button> <br>
       <!--<button class="settingsButton" id="save" type="button" name="save">Save</button>
       <button class="settingsButton" id="load" type="button" name="load">Load</button>-->
     </div>
-    <div id="damageText">1</div>
+    <div id="clickDamageText"></div>
+    <div id="autoDamageText"></div>
     <!--<h2 id="diamonds">Diamonds: 0</h2>-->
     </header>
     <main>
